--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ nav li {
   font-style: normal;
 }
 
-header {
+header nav ul li {
     display: inline-block;
 
     border: 10px solid;
@@ -17,4 +17,9 @@ header {
 
     margin-right: 145px;
     background-color: blueviolet;
+}
+
+header nav ul li a {
+    text-decoration: none;
+    
 }
