--- a/style.css
+++ b/style.css
@@ -6,6 +6,19 @@ nav li {
   font-style: normal;
 }
 
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 413px;
+
+    width: 160%;
+    height: 140px;
+
+    background-color: blue;
+    border: 10px solid;
+}
+
 header nav ul li {
     display: inline-block;
 
@@ -21,5 +34,5 @@ header nav ul li {
 
 header nav ul li a {
     text-decoration: none;
-    
+
 }
