--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=WDXL+Lubrifont+TC&display=swap');
-
+*{
+    /*normalização*/
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
 nav li {
       font-family: "WDXL Lubrifont TC", sans-serif;
   font-weight: 400;
