--- a/style.css
+++ b/style.css
@@ -1,63 +1,136 @@
-@import url('https://fonts.googleapis.com/css2?family=WDXL+Lubrifont+TC&display=swap');
-*{
-    /*normalização*/
-    margin: 0px;
-    padding: 0px;
+@import url('https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap');
+
+body {
+    background-color: rgb(0, 98, 255);
+    font-family: "Edu NSW ACT Cursive", cursive;
+    font-optical-sizing: auto;
+    font-weight: 600;   /* escolha: 400 (normal), 700 (negrito), etc */
+    font-style: normal;
+    margin: 0;
+    padding: 0;
+    min-height: 700px;
+}
+
+.caixa-texto {
+    background-color: #fff;
+    border: 6px solid #000;
+    border-radius: 30px;
+    max-width: 98%;
+    height: 100px;
+    padding: 20px;
+    box-sizing: border-box;
+
+    margin: 0 auto;              
+    
+    display: flex;
+    justify-content: space-between;   
+    align-items: center;
+    gap: 40px;
+}
+
+.caixa-texto h1 {
+    margin: 0;              
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.retangulo-menor {
+    background-color: rgb(0, 98, 255);
+    border: 5px solid black;
+    border-radius: 180px;
+    padding: 20px 40px;            
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;               
+    transition: transform 0.2s ease, background-color 0.2s ease;
+}
+
+.retangulo-menor:hover {
+    background-color: rgb(0, 52, 134) ;    
+    transform: scale(1.05);        
+}
+
+
+.caixa-grande {
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(102, 0, 255);
+    border: 6px solid black;
+    border-radius: 20px;
+    width: 98%;
+    height: 600px;
+    padding: 20px;
     box-sizing: border-box;
 }
-nav li {
-      font-family: "WDXL Lubrifont TC", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
 
-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    gap: 413px;
-
-    width: 160%;
-    height: 140px;
-
-    background-color: blue;
-    border: 10px solid;
-}
-
-header nav ul li {
-    display: inline-block;
-
-    border: 10px solid;
+.retangulo-esquerdo,
+.retangulo-direito {
+    position: absolute;
+    top: 20%;
+    width: 200px;
+    min-height: 550px;
+    background-color: rgb(255, 217, 0);
+    color: black;
+    padding: 20px;
+    box-sizing: border-box;
     border-radius: 50px;
+    border: 6px solid black;
 
-    width: 241px;
-    height: 77px;
-
-    margin-right: 145px;
-    background-color: blueviolet;
-}
-
-header nav ul li a {
-    text-decoration: none;
-
-}
-
-header img{
-    width: 175px;
-    height: 110px;
-    object-fit: cover;
-
-
-    border: 10px solid;
-    border-radius: 25px;
-
-}
-main{
-    display: flex;
+    display: flex;             
+    flex-direction: column;
     align-items: center;
     justify-content: space-around;
+}
 
-    margin-top: 45px;
-    margin-left: auto;
-    margin-right: auto;
+.retangulo-esquerdo {
+    left: 83%;
+}
+
+.retangulo-direito {
+    right: 83%;
+}
+
+.retangulo-esquerdo img,
+.retangulo-direito img {
+    width: 120px;
+    height: 120px;
+    object-fit: cover; 
+    border-radius: 15px;
+    margin: 5px 0;
+    border: 6px solid black;
+}
+
+.retangulo-meio {
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border: 6px solid black;
+    border-radius: 180px;
+    width: 900px;
+    height: 500px;
+    padding: 20px;
+    box-sizing: border-box;
+    display: flex;  
+     align-items: center;
+    justify-content: space-around;
+}
+.retangulo-meio img{
+    width: 680px;
+    height: 380px;
+    object-fit: cover; 
+    border-radius: 15px;
+    margin: 5px 0;
+    border: 6px solid black;
+}
+.img-caixa {
+    width: 190px;          
+    height: 90px;
+    object-fit: cover;
+    border-radius: 105px;
+    border: 6px solid black;
 }
